<!-- Kyle Menegotti, n01462135, Section: RNB -->

<resources>
    <string name="app_name">Kyle Menegotti n01462135</string>
    <string name="help">Help</string>
    <string name="home">Home</string>
    <string name="Rent">Rent</string>
    <string name="_416_555_5555">416-555-5555</string>
    <string name="Enter" />
    <string name="semi_detached_home">Semi-Detached Home</string>
    <string name="detached_home">Detached Home</string>
    <string name="apartment">Apartment</string>
    <string name="SelectToast" />
    <string name="aptimg3">aptimg3</string>
    <string name="test">test</string>
    <string name="option_3">Option #3</string>
    <string name="aptimg2">aptimg2</string>
    <string name="_42_dunedin_drive_m6k4rp_toronto_650sq_ft_monthly_rent_1750">42 Dunedin Drive, M6K4RP, Toronto 650SQ FT MONTHLY RENT: $1750</string>
    <string name="option_2">Option #2</string>
    <string name="_14_deerhurts_drive_l6k3rj_toronto_650sq_ft_monthly_rent_1750">14 DeerHurts Drive, L6K3RJ, Toronto 650SQ FT MONTHLY RENT: $1750</string>
    <string name="aptimg1">aptimg1</string>
    <string name="option_1">Option #1</string>
    <string name="apartment_options">Apartment Options</string>
    <string name="_16_johnroad_crt_m6k4rp_toronto_650sq_ft_monthly_rent_1750">16 JohnRoad Crt, M6K4RP, Toronto 650SQ FT MONTHLY RENT: $1750</string>
    <string name="providing_clients_with_the_best_options_to_fit_their_housing_needs">Providing clients with the best options to fit their housing needs</string>
    <string name="leaseorrenthome_inc">LeaseOrRentHome Inc</string>
    <string name="errorOkay" />
    <string name="lasterrorOne" />
    <string name="errorThree" />
    <string name="errorTwo" />
    <string name="errorOne" />
    <string name="errorOnee" />
    <string name="lasterrorThree" />
    <string name="lasterrorTwo" />
    <string name="lasterrorTwoo" />
    <string name="payment_options">Payment Options</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="credit_debit_card_number">Credit/Debit Card Number</string>
    <string name="detached_options">Detached Options</string>
    <string name="option_11">Option #1</string>
    <string name="img4">img4</string>
    <string name="_82_toronto_st_mj24ck_1_300sq_ft_monthly_rent_2500">82 Toronto St, MJ24Ck, 1,300SQ FT MONTHLY RENT: $2500</string>
    <string name="option_22">Option #2</string>
    <string name="img5">img5</string>
    <string name="_1_westchester_st_m2jkc3_1_700sq_ft_monthly_rent_2850">1 Westchester St, M2JkC3, 1,700SQ FT MONTHLY RENT: $2850</string>
    <string name="option_33">Option #3</string>
    <string name="img6">img6</string>
    <string name="_14_deerain_st_mj35dk_2_300sq_ft_monthly_rent_3500">14 Deerain St, MJ35Dk, 2,300SQ FT MONTHLY RENT: $3500</string>
    <string name="continue1">Continue</string>
    <string name="continue2">Continue</string>
    <string name="_16_the_queensway_m2p3jr_toronto_2650sq_ft_monthly_rent_2975">16 The Queensway, M2P3JR, Toronto. 2650SQ FT Monthly Rent: $2975</string>
    <string name="img9">img9</string>
    <string name="option_34">Option #3</string>
    <string name="_24_hampshire_blvd_l2j4ck_toronto_2223sq_ft_monthly_rent_2870">24 Hampshire Blvd, L2J4CK, Toronto. 2223SQ FT Monthly Rent: $2870</string>
    <string name="img8">img8</string>
    <string name="option_24">Option #2</string>
    <string name="_790_princeton_rd_m3d2l4_toronto_2800sq_ft_monthly_rent_3100">790 Princeton Rd, M3D2L4, Toronto. 2800SQ FT Monthly Rent: $3100</string>
    <string name="img7">img7</string>
    <string name="option_14">Option #1</string>
    <string name="semi_detached_options">Semi-Detached Options</string>
</resources>