<?xml version="1.0" encoding="utf-8"?>

<!--
Kyle Menegotti
N01462135
Section RNB
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetachedActivity"
    android:background="#E4F0F6">

    <TextView
        android:id="@+id/KyleTextViewApartment"
        android:layout_width="415dp"
        android:layout_height="69dp"
        android:text="@string/detached_options"
        android:textSize="35sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/KyleScrollViewOne"
        android:layout_width="410dp"
        android:layout_height="542dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/KyleCheckBoxOne"
                android:text="@string/option_11"
                android:textSize="28sp"
                android:textStyle="normal" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="103dp"
                android:layout_gravity="center"
                android:contentDescription="@string/img4"
                app:srcCompat="@drawable/img4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:text="@string/_82_toronto_st_mj24ck_1_300sq_ft_monthly_rent_2500"
                android:textSize="18sp"
                android:textStyle="bold" />


            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/KyleCheckBoxTwo"
                android:text="@string/option_22"
                android:textSize="28sp"
                android:textStyle="normal" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="136dp"
                android:layout_gravity="center"
                android:contentDescription="@string/img5"
                app:srcCompat="@drawable/img5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:text="@string/_1_westchester_st_m2jkc3_1_700sq_ft_monthly_rent_2850"
                android:textSize="18sp"
                android:textStyle="bold" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/KyleCheckBoxThree"
                android:text="@string/option_33"
                android:textSize="28sp"
                android:textStyle="normal" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="136dp"
                android:layout_gravity="center"
                android:contentDescription="@string/img6"
                app:srcCompat="@drawable/img6" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:text="@string/_14_deerain_st_mj35dk_2_300sq_ft_monthly_rent_3500"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>


    <Button
        android:layout_width="282dp"
        android:layout_height="64dp"
        android:id="@+id/KyleButtonNew"
        android:text="@string/continue1"
        android:textSize="30sp"
        android:textStyle="normal"
        android:backgroundTint="#13324b"
        android:textColor="#F8F9FA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

</androidx.constraintlayout.widget.ConstraintLayout>