<?xml version="1.0" encoding="utf-8"?>

<!--
Kyle Menegotti
N01462135
Section RNB
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentActivity">

    <TextView
        android:id="@+id/KyleTextView"
        android:layout_width="410dp"
        android:layout_height="71dp"
        android:gravity="center"
        android:text="@string/payment_options"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <EditText
        android:id="@+id/KyleEdit"
        android:layout_width="407dp"
        android:layout_height="69dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:text="@string/first_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/KyleEditTextCard"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.229"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/KyleEditTextLast"
        android:layout_width="407dp"
        android:layout_height="69dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:text="@string/last_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.367"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/KyleEditTextCard"
        android:layout_width="408dp"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="5"
        android:selectAllOnFocus="true"
        android:text="@string/credit_debit_card_number"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <ImageButton
        android:id="@+id/KylePayButton"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/paymentimg1"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>